--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^3.8.1",
+    "@material-ui/icons": "^3.0.2",
     "@nivo/core": "^0.52.0",
     "@nivo/pie": "^0.52.0",
     "axios": "^0.18.0",
@@ -25,7 +26,8 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "sweetalert2": "^7.33.1"
   },
   "scripts": {
     "start": "node server/server.js",
